--- a/style.css
+++ b/style.css
@@ -3,5 +3,5 @@
     position: fixed;
     right: 2%;
     top: 15%;
-    content: url("image/scroll-image.png");
+    content: url("scroll-image.png");
 }
